--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -3,18 +3,20 @@
     top: 0;
     left: 0;
     bottom: 0;
-    width: 8vw;
+    width: 5vw;
     max-width: 250px;
-    position: fixed;
     background-color: #007bff;
     z-index: 1;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
 
 .Navbar ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding: 1em;
 }
 
 .Navbar ul li:hover::after {
@@ -56,9 +58,4 @@
 
 .Navbar li.active .MuiIconButton-root {
     color: #0062cc; /* Change the color when active */
-}
-
-.Navbar .inventory-icon-container {
-    display: flex;
-    align-items: center;
 }
